[refactor] #96 사용자 조회 페이징 처리 로직 리팩토링